fix navbar on mobile, update bcps and minor edits to about, home page

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -62,8 +62,8 @@
 
 .overlay .closebtn {
   position: absolute;
-  top: 25px;
-  right: 25px;
+  top: -5px;
+  right: 18px;
   font-size: 60px;
 }
 
