--- a/css/section.css
+++ b/css/section.css
@@ -81,7 +81,7 @@
 /* ABOUT SECTION */
 
 .about-container {
-	width: 80%;
+	width: 70%;
 	height: fit-content;
 	align-items: left;
 	justify-content: center;
